Fixed horrid scrollbar with CSS

--- a/src/components/desktop/DesktopToolsMaster.scss
+++ b/src/components/desktop/DesktopToolsMaster.scss
@@ -13,100 +13,64 @@ $header-top-color: #7946a1;
 $header-bottom-color: #a343a4;
 
 :local(.container) {
-  font-family: Helvetica, sans-serif;
+  @include no-select();
+  @include show-scroll();
+  overflow-x: auto;
   width: 100%;
+  padding-bottom: 2px;
 
-  .header {
-    @include background-image(linear-gradient(to bottom, $header-top-color, $header-bottom-color));
-    @include no-select();
-    color: $item-bg;
-    padding: 10px 0;
-    .title {
-      padding: 10px 0;
-      font-weight: $title-weight;
-      font-size: $title-size;
-      text-align: center;
-    }
-    .categories {
-      padding-left: 9px;
-      display: flex;
-      > * {
-        color: inherit;
-        text-decoration: none;
-        display: block;
-        padding: 3px 6px;
-        margin-right: 3px;
-        cursor: pointer;
-        &:hover {
-          text-decoration: underline;
-        }
-        &.current {
-          background-color: $item-bg;
-          border-radius: 2px;
-          color: $header-bottom-color;
-          cursor: default;
-          &:hover {
-            text-decoration: none;
-          }
-        }
-      }
-    }
+  .scroll-area {
+    white-space: nowrap;
+    background-color: $tools-bg;
+    display: flex;
+    padding: 1px 3px;
   }
 
-  .tools {
-    @include no-select();
-    background-color: $tools-bg;
-    .scroll-area {
-      display: flex;
-      padding: 3px 5px 1px 5px;
-      overflow-x: scroll;
-      .col {
-        flex: 1 0 auto;
-        max-width: 104px;
-        height: 100%;
-        a {
-          color: inherit;
-          text-decoration: none;
-        }
-        .tool {
-          width: 96px;
-          text-align: center;
-          cursor: pointer;
-          background-color: $item-bg;
-          border: thin solid darken($item-bg, $border-darken);
-          border-radius: 4px;
-          padding: 10px;
-          box-sizing: border-box;
-          margin: 8px 4px;
-          .icon {
-            width: $icon-size;
-            height: $icon-size;
-            border-radius: 4px;
-            margin: auto;
-          }
-          .name {
-            font-size: 12px;
-            font-weight: $title-weight;
-            text-align: center;
-            margin: 1px 0 3px 0;
-          }
-          .stars {
-            text-align: center;
-            img {
-              height: $star-size;
-            }
-          }
-        }
-        .tool:hover {
-          background-color: darken($item-bg, 6%);
-          border: thin solid darken($item-bg, 6% + $border-darken);
-        }
-
-        .tool:active {
-          background-color: darken($item-bg, 10%);
-          border: thin solid darken($item-bg, 10% + $border-darken);
+  .col {
+    flex: 1 0 auto;
+    max-width: 104px;
+    height: 100%;
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+    .tool {
+      width: 96px;
+      text-align: center;
+      cursor: pointer;
+      background-color: $item-bg;
+      border: thin solid darken($item-bg, $border-darken);
+      border-radius: 4px;
+      padding: 10px;
+      box-sizing: border-box;
+      margin: 8px 4px;
+      .icon {
+        width: $icon-size;
+        height: $icon-size;
+        border-radius: 4px;
+        margin: auto;
+      }
+      .name {
+        font-size: 12px;
+        font-weight: $title-weight;
+        text-align: center;
+        margin: 1px 0 3px 0;
+      }
+      .stars {
+        text-align: center;
+        img {
+          height: $star-size;
         }
       }
+    }
+    .tool:hover {
+      background-color: darken($item-bg, 6%);
+      border: thin solid darken($item-bg, 6% + $border-darken);
+    }
+
+    .tool:active {
+      background-color: darken($item-bg, 10%);
+      border: thin solid darken($item-bg, 10% + $border-darken);
     }
   }
 }
