--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -11,7 +11,6 @@ body {
   background-image: url('../../img/wallpaper.jpg');
   background-size: cover;
   font-size: 12px;
-  overflow: hidden;
 }
 
 :local(.container) {
